# python-package-cookiecutter

./: README.md  cookiecutter.json  pyproject.toml
docs/: contributing.md
{{ cookiecutter.project_name_dash }}/: .pre-commit-config.yaml  README.md  pyproject.toml
{{ cookiecutter.project_name_dash }}/.github/workflows/: linting.yaml
{{ cookiecutter.project_name_dash }}/docs/: contributing.md
{{ cookiecutter.project_name_dash }}/requirements/: linting.txt
{{ cookiecutter.project_name_dash }}/{{ cookiecutter.project_name_underscore }}/: __init__.py
